avformat/movenc: rescale when copying duration to timecode track

Fixes Ticket3453

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>